--- a/backend/.env
+++ b/backend/.env
@@ -3,3 +3,4 @@ vkgolakijaiho
 # Database configuration
 MONGO_URI=mongodb+srv://veekesh487_db_user:vkgolakijaiho@cluster0.gwgiqlx.mongodb.net/
 MONGODB_NAME=realEstate
+JWT_SECRET=your_jwt_secret_key_qsjsjdbjwbdjbwjbdjw
